--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Go to Space</title>
-	<link href="page3stylesheet.css" rel="stylesheet" type="text/css">
+	<link href="index3stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
