--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Go to Space</title>
 	<link href="index3stylesheet.css" rel="stylesheet" type="text/css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Overpass&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -134,7 +136,10 @@
 
 	</script>
 	
-	<p>https://wallpapercave.com/wp/wp2644006.jpg</p>
+	<footer>
+		<a href="https://yukihoshiqaq.github.io/index2/"><button class="next">Next</button></a>
+		<a href="https://yukihoshiqaq.github.io/spacebunny/"><button class="home">Home</button></a>
+	</footer>
 	
 </body>
 </html>
