--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 	</script>
 	
 	<footer>
-		<a href="https://yukihoshiqaq.github.io/index2/"><button class="next">Next</button></a>
+		<a href="https://yukihoshiqaq.github.io/index4/."><button class="next">Next</button></a>
 		<a href="https://yukihoshiqaq.github.io/spacebunny/"><button class="home">Home</button></a>
 	</footer>
 	
